[package]
name = "tracktorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "cookies", "gzip", "json"] }
scraper = { version = "0.19" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
anyhow = { version = "1.0" }
chrono = { version = "0.4" }
keyring = { version = "2.3" }
clap = { version = "4.5", features = ["derive"] }
rpassword = { version = "7.3" }
directories = { version = "5.0" }
rand = { version = "0.8" }
