[package]
name = "tracktorial"
authors = ["antonio <antonio.mikley@gmail.com>"]
version = "0.0.3"
edition = "2021"
description = "Manage your Factorial shifts and breaks from the command line"
repository = "https://github.com/antoniomikley/tracktorial"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "cookies", "gzip", "json"] }
scraper = { version = "0.19" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
anyhow = { version = "1.0" }
chrono = { version = "0.4" }
keyring = { version = "2.3" }
clap = { version = "4.5", features = ["derive"] }
clap_complete = { version = "4.5" }
rpassword = { version = "7.3" }
directories = { version = "5.0" }
rand = { version = "0.8" }

[dev-dependencies]
serial_test = { version = "3.1" }
once_cell = { version = "1.19" }
